@startuml

title __GUI's Class Diagram__\n

  package gui {
    abstract class BaseScene {
        - scene : Scene
        + BaseScene()
        + getScene()
        + setScene()
        + getGame()
        + setGame()
        {abstract} + setup()
        # display()
    }
  }
  

  package gui {
    class BattleScene {
        + BattleScene()
        + setup()
    }
  }
  

  package gui {
    class FirstScene {
        + FirstScene()
        + setup()
    }
  }
  

  package gui {
    class GameOverScene {
        + GameOverScene()
        + setup()
    }
  }
  

  BaseScene o-- Project : game
  BattleScene -up-|> BaseScene
  FirstScene -up-|> BaseScene
  GameOverScene -up-|> BaseScene


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
